--- a/js/index.html
+++ b/js/index.html
@@ -10,6 +10,7 @@
         <ul>
                 <li><a href="js1/index.html">Challenge 1</a></li>
                  <li><a href="js2/index.html">Challenge 2</a></li>
+                 <li><a href="js3/index.html">Challenge 3</a></li>
         </ul>
 </body>
 </html>
