--- a/js/index.html
+++ b/js/index.html
@@ -11,6 +11,7 @@
                 <li><a href="js1/index.html">Challenge 1</a></li>
                  <li><a href="js2/index.html">Challenge 2</a></li>
                  <li><a href="js3/index.html">Challenge 3</a></li>
+                 <li><a href="js4/index.html">Challenge 4</a></li>
         </ul>
 </body>
 </html>
