--- a/js/index.html
+++ b/js/index.html
@@ -12,6 +12,7 @@
                  <li><a href="js2/index.html">Challenge 2</a></li>
                  <li><a href="js3/index.html">Challenge 3</a></li>
                  <li><a href="js4/index.html">Challenge 4</a></li>
+                 <li><a href="js5/index.html">Challenge 5</a></li>
         </ul>
 </body>
 </html>
